@@ -1,3 +1,10 @@
+2013-04-30 Dario Rodriguez <dario@artica.es>
+
+	* operation/incidents/incident_detail.php: Fixed a bug updating
+	SLA disabled fiedl.
+ 	* operation/incidents/incident_dashboard_detail.php: Now sla disable
+	widget doesn't shows any information is SLA is disabled.
+
 2013-04-30  Vanessa Gil <vanessa.gil@artica.es>
 
 	* operation/incidents/incident_detail.php: Fixed bug:
